fix: overflow container

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,7 +24,7 @@ body {
     width: 90%;
     display: flex;
     align-items: center;
-    overflow: hidden;
+    overflow: auto;
     flex-direction: column;
     margin: 0 auto;
 }
